Wed Mar 18 12:07:36 2015  Koichi Sasada  <ko1@atdot.net>

	* string.c: add a comment about RSTRING_FSTR.

Wed Mar 18 12:01:53 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_any_hash): use same hash values with Float#hash so
	  that -0.0 and +0.0 will be identical.
	  [ruby-core:68541] [Bug #10979]

Wed Mar 18 05:34:32 2015  Koichi Sasada  <ko1@atdot.net>

	* string.c: introduce STR_FAKESTR to show string is FAKESTR or not.

	* string.c (STR_SET_SHARED): ignore FAKESTR because only Ruby objects
	  can use write barrier.

Tue Mar 17 18:59:16 2015  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: use rb_gc_writebrrier() simply.
	  For incremental GC, we need to get a pointer to the objspace.
	  We can share this pointer for the following WB process.
	  And considering icache hit ratio, process in the GC.

	* gc.c (rb_gc_writebarrier): added.

	* gc.c (gc_writebarrier_generational, gc_writebarrier_incremental):
	  make them NOINLINE because inlining them into rb_gc_writebarrier()
	  makes a prologue code of rb_gc_writebarrier() longer (storing callee
	  save registers).

	  This patch improve the performance of WB on micro-benchmarks.

	  name                   ruby 2.1   trunk   modified
	  vm1_gc_wb_ary*            0.511   0.632      0.532
	  vm1_gc_wb_ary_promoted*   0.578   0.701      0.674
	  vm1_gc_wb_obj*            0.419   0.575      0.492
	  vm1_gc_wb_obj_promoted*   0.537   0.664      0.618
	                                                 (sec)

Tue Mar 17 18:51:43 2015  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm1_gc_wb_ary(_promoted).rb: separate fastpath and
	  slowpath for WB.

	  Before this change bm_vm1_gc_wb_ary.rb tried to check the performance
	  for WB slowpath (making a reference from oldobj to newobj). However,
	  from Ruby 2.2, 3 GCs are needed to promote new objects because
	  only 3 age objects are promted objects.

	  To compare fastpath and slowpath, introduce new "promoted" version
	  benchmark.
