@@ -1,5 +1,9 @@
 short_lived_ary = []
 
+if RUBY_VERSION >= "2.2.0"
+  GC.start(full_mark: false, immediate_mark: true, lazy_sweep: false)
+end
+
 i = 0
 short_lived = ''
 while i<30_000_000 # while loop 1
