@@ -1,7 +1,7 @@
 long_lived = []
 
 if RUBY_VERSION > "2.2.0"
-  3.times{ GC.start(immediate_mark: false, lazy_sweep: false) }
+  3.times{ GC.start(full_mark: false, immediate_mark: true, lazy_sweep: false) }
 elsif
   GC.start
 end
